--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,16 @@
 
 S3method("$<-",savvy_sudachir2__sealed)
 S3method("[[<-",savvy_sudachir2__sealed)
+S3method(is.blank,character)
+S3method(is.blank,default)
 S3method(tokenize,character)
 S3method(tokenize,default)
+export(as_tokens)
 export(create_tagger)
 export(fetch_dict)
+export(is_blank)
+export(ngram_tokenizer)
+export(pack)
 export(prettify)
 export(tokenize)
 importFrom(dplyr,"%>%")
