--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: sudachir2
 Title: R Wrapper for 'sudachi.rs'
-Version: 0.6.10.3
+Version: 0.6.10.4
 Authors@R:
     person("Akiru", "Kato", , "paithiov909@gmail.com", role = c("aut", "cre"))
 Description: Offers bindings to 'sudachi.rs'
-    <https://github.com/WorksApplications/sudachi.rs>, a Rust
+    (<https://github.com/WorksApplications/sudachi.rs>), a Rust
     implementation of 'Sudachi' Japanese morphological analyzer.
 License: Apache License (>= 2)
 Depends:
