Clean up the intermediate objects to avoid warning (#1)
* Clean up the intermediate objects to avoid warning

* Tweak

* Make sure clean_intermediate is executed after "$(SHLIB)" is created

--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -11,7 +11,7 @@ PKG_LIBS = -L$(LIBDIR) -lsudachir2
 
 CARGO_BUILD_ARGS = --lib --profile $(PROFILE) --manifest-path=./rust/Cargo.toml --target-dir $(TARGET_DIR)
 
-all: C_clean
+all: $(SHLIB) clean_intermediate
 
 $(SHLIB): $(STATLIB)
 
@@ -31,8 +31,10 @@ $(STATLIB):
 	    cargo +nightly build $(CARGO_BUILD_ARGS) --target $(TARGET) -Zbuild-std=panic_abort,std; \
 	  fi
 
-C_clean:
-	rm -Rf $(SHLIB) $(STATLIB) $(OBJECTS)
+clean_intermediate: $(SHLIB)
+	rm -f $(STATLIB)
 
 clean:
-	rm -Rf $(SHLIB) $(STATLIB) $(OBJECTS) rust/target
+	rm -Rf $(SHLIB) $(OBJECTS) $(STATLIB) ./rust/target
+
+.PHONY: all clean_intermediate clean
